cabal-version:       3.0
name:                bv-little
version:             1.2.0
synopsis:            Efficient little-endian bit vector library
category:            Data, Bit Vectors
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alex Washburn
maintainer:          hackage@recursion.ninja
homepage:            https://github.com/recursion-ninja/bv-little
bug-reports:         https://github.com/recursion-ninja/bv-little/issues
copyright:           (c) Alex Washburn 2020
description:
  .
  This package contains a time- and space- efficient implementation of /little-endian, immutable/ bit vectors. Provides implementations of applicable typeclasses and numeric conversions.
  .
  The declared cost of each operation is either worst-case or amortized.
  .
  For an implementation of /big-endian, immutable/ bit vectors use the <https://hackage.haskell.org/package/bv bv> package.
  .
  For an implementation of /little-endian, mutable/ bit vectors, use the <https://hackage.haskell.org/package/bitvec bitvec> package.          

build-type:          Simple

tested-with:         GHC == 8.10.1
                     GHC == 8.8.3

extra-source-files:  changelog.md
                     README.md
                     stack.yaml

source-repository head
  type:     git
  location: https://github.com/recursion-ninja/bv-little


common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


library

  import: ghc-flags

  build-depends:      base                  >= 4.5.1 && < 5
                    , hashable              >= 1.3
                    , core

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian

  hs-source-dirs:   src


library core

  import: ghc-flags

  visibility: private
        
  build-depends:      base                  >= 4.5.1 && < 5
                    , deepseq               >= 1.4.1.1
                    , hashable              >= 1.3
                    , integer-gmp           >= 1.0
                    , primitive             >= 0.6.4.0

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.Internal

  hs-source-dirs:   src/core


library instances

  import: ghc-flags
        
  visibility: public
        
  build-depends:      instances-binary
                    , instances-mono-traversable-keys
                    , instances-mono-traversable
                    , instances-quickcheck
                    , instances-text-show

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.Instances

  hs-source-dirs:   src/full


library instances-binary

  import: ghc-flags
        
  visibility: public
        
  build-depends:      binary                >= 0.8
                    , base                  >= 4.5.1 && < 5
                    , core

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.Binary

  hs-source-dirs:   src/libs


library instances-mono-traversable-keys

  import: ghc-flags

  visibility: public
        
  build-depends:      base                  >= 4.5.1 && < 5
                    , core
                    , instances-mono-traversable
                    , keys                  >= 3.10.1
                    , mono-traversable      >= 1.0
                    , mono-traversable-keys >= 0.1.0

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.MonoKeyed

  hs-source-dirs:   src/keys


library instances-mono-traversable

  import: ghc-flags

  visibility: public
        
  build-depends:      base                  >= 4.5.1 && < 5
                    , core
                    , mono-traversable      >= 1.0

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.MonoTraversable

  hs-source-dirs:   src/libs


library instances-quickcheck

  import: ghc-flags

  visibility: public
        
  build-depends:      base                  >= 4.5.1 && < 5
                    , core
                    , QuickCheck            >= 2.8

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.QuickCheck

  hs-source-dirs:   src/libs


library instances-text-show

  import: ghc-flags

  visibility: public
        
  build-depends:      base                  >= 4.5.1 && < 5
                    , core
                    , text-show             >= 3.8

  default-language: Haskell2010

  exposed-modules:  Data.BitVector.LittleEndian.TextShow

  hs-source-dirs:   src/libs


Test-Suite test-suite

  type:             exitcode-stdio-1.0

  main-is:          TestSuite.hs

  build-depends:      base                  >= 4.5.1 && < 5
                    , bv-little
                    , instances
                    , deepseq               >= 1.4.1.1
                    , hashable              >= 1.2.3.2
                    , mono-traversable      >= 1.0.5.0
                    , mono-traversable-keys >= 0.1.0
                    , QuickCheck            >= 2.8
                    , smallcheck            >= 1.1.5
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , tasty-smallcheck
                    , text-show             >= 3.2.1

  if !impl(ghc >= 8.0)

    build-depends:    semigroups       >= 0.18  && < 1.0
                    , transformers

  default-language: Haskell2010

  hs-source-dirs:   test, util

  other-modules:    Data.BitVector.Visual
                    Operator.Binary.Comparison
                    Operator.Binary.Logical
                    Operator.Unary.Logical
                    

benchmark benchmark-suite

  type:             exitcode-stdio-1.0

  main-is:          Benchmarks.hs

  build-depends:      base             >= 4.5.1 && < 5
                    , bv-little
                    , instances
                    , criterion
                    , deepseq          >= 1.4.1.1
                    , hashable         >= 1.2.3.2
                    , mono-traversable >= 1.0.5.0
                    , QuickCheck       >= 2.8
                    , smallcheck       >= 1.1.5

  if !impl(ghc >= 8.0)

    build-depends:    semigroups       >= 0.18  && < 1.0

  default-language: Haskell2010

  ghc-options:      -O2
                    -threaded
                    -fdicts-cheap
                    -fmax-simplifier-iterations=10
                    -fno-full-laziness
                    -fspec-constr-count=6

                    -- Sanity check warnings
                    -Wall
                    -fwarn-dodgy-foreign-imports
                    -fwarn-incomplete-record-updates
                    -fwarn-incomplete-uni-patterns
                    -fwarn-overlapping-patterns

                    -- Turn off type default warnings
                    -fno-warn-type-defaults

  hs-source-dirs:   bench, util

  other-modules:    Operator.Binary.Comparison
                    Operator.Binary.Logical
                    Operator.Unary.Logical
                    


benchmark benchmark-heap-stack

  type:             exitcode-stdio-1.0

  main-is:          HeapStack.hs

  build-depends:      base             >= 4.5.1 && < 5
                    , bv-little
                    , instances
                    , criterion
                    , deepseq          >= 1.4.1.1
                    , hashable         >= 1.2.3.2
                    , mono-traversable >= 1.0.5.0
                    , QuickCheck       >= 2.8
                    , smallcheck       >= 1.1.5

  if !impl(ghc >= 8.0)

    build-depends:    semigroups       >= 0.18  && < 1.0

  default-language: Haskell2010

  ghc-options:      -O2
--                    -ddump-simpl-stats
                    -threaded
                    -fdicts-cheap
                    -fmax-simplifier-iterations=10
                    -fno-full-laziness
                    -fspec-constr-count=6
                    -rtsopts
--                    -prof

                    -- Sanity check warnings
                    -Wall
                    -fwarn-dodgy-foreign-imports
                    -fwarn-incomplete-record-updates
                    -fwarn-incomplete-uni-patterns
                    -fwarn-overlapping-patterns

                    -- Turn off type default warnings
                    -fno-warn-type-defaults

  hs-source-dirs:   bench, util

  other-modules:    Operator.Binary.Comparison
                    Operator.Binary.Logical
                    Operator.Unary.Logical
